Reference main.js in theme

--- a/src/theme.mustache
+++ b/src/theme.mustache
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{store_name}}</title>
-    <link href="{{cdn_url}}/main.css" rel="stylesheet" type="text/css">
+    <link href="{{cdn_url}}/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Welcome to {{store_name}}</h1>
@@ -29,5 +29,6 @@
     {{/products}}
     </ul>
     {{/list_page}}
+    <script src="{{cdn_url}}/main.js"></script>
   </body>
 </html>
